tests/_resources/error_gcns/syntax_double_equals.gcn
# Error: Double equals sign in equation
block MARKET
{
    identities
    {
        Y[] = C[] = I[];
    };
};
